--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -35,10 +35,14 @@ img {
   margin: 3.5%;
 }
 .header-logo {
-    float: left;
+  float: left;
+}
+.header-logo img {
+  width:auto;
+  height:auto;
 }
 .main-navbar {
-    float: right;
+  float: right;
 }
 .topnav a {
   float: left;
@@ -90,9 +94,7 @@ img {
   }
 }
 
-
-
- @media screen and (max-width: 540px) {
+@media screen and (max-width: 540px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
@@ -139,6 +141,21 @@ main {
 
 /* Modal form */
 
+.error-div {
+  border:2px solid #fe142f;
+  border-radius:20px;
+  padding:10px;
+  margin: 10px 0px;
+}
+.error-msg {
+  color:#fe142f;
+  margin:0;
+  padding:0;
+  font-size: 16px;
+}
+.formData p {
+  padding:0;
+}
 .button {
   background: #fe142f;
   margin-top: 0.5em;
@@ -526,4 +543,6 @@ footer {
     opacity: 1;
   }
 }
+
+
 
